@@ -10,6 +10,9 @@ bug.report <- function(subject = "", ccaddress = Sys.getenv("USER"),
                   "\\n\\n",
                   win.version(),
 		  "\\n\\n",
+                  "Locale:\\n",
+                  Sys.getlocale(),
+		  "\\n\\n",
 		  "Search Path:\\n ",
 		  paste(search(), collapse=", "),
 		  "\\n", sep="", collapse="")
